--- a/static/chat.html
+++ b/static/chat.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SDRF-GPT 聊天助手</title>
+    <title>SDRF-GPT Chat Assistant</title>
     <style>
         * {
             margin: 0;
@@ -337,22 +337,22 @@
 </head>
 <body>
     <div class="container">
-        <!-- 侧边栏 -->
+        <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-header">
-                <h2>💬 对话历史</h2>
-                <button class="new-chat-btn" onclick="newChat()">+ 新建对话</button>
+                <h2>💬 Chat History</h2>
+                <button class="new-chat-btn" onclick="newChat()">+ New Chat</button>
             </div>
             <div class="sessions-list" id="sessionsList"></div>
         </div>
 
-        <!-- 聊天区域 -->
+        <!-- Chat Area -->
         <div class="chat-container">
             <div class="chat-header">
-                <h1>🧬 SDRF-GPT 助手</h1>
+                <h1>🧬 SDRF-GPT Assistant</h1>
                 <div class="header-buttons">
-                    <button onclick="clearChat()">清空对话</button>
-                    <button onclick="window.location.href='/home'">返回首页</button>
+                    <button onclick="clearChat()">Clear Chat</button>
+                    <button onclick="window.location.href='/home'">Back to Home</button>
                 </div>
             </div>
 
@@ -361,7 +361,7 @@
             <div class="input-area">
                 <div class="file-upload-area">
                     <label for="fileInput" style="cursor: pointer; color: #667eea; font-weight: bold;">
-                        📁 点击上传文件 (支持 PDF, CSV, Excel, TXT)
+                        📁 Click to Upload Files (PDF, CSV, Excel, TXT)
                     </label>
                     <input type="file" id="fileInput" multiple
                            accept=".pdf,.csv,.txt,.xlsx,.xls,.tsv"
@@ -373,10 +373,10 @@
                 <div class="input-wrapper">
                     <input type="text"
                            id="userInput"
-                           placeholder="输入消息..."
+                           placeholder="Type your message..."
                            onkeypress="handleKeyPress(event)">
                     <button class="send-btn" onclick="sendMessage()" id="sendBtn">
-                        发送
+                        Send
                     </button>
                 </div>
             </div>
@@ -388,13 +388,13 @@
         let uploadedFiles = [];
         let allSessions = [];
 
-        // 初始化
+        // Initialize
         async function init() {
             loadSessions();
-            addMessage('assistant', '👋 你好！我是 SDRF-GPT 助手。\n\n请告诉我该实验样本的 organism（物种）是什么？我将根据物种类型为您选择合适的 SDRF 模板。');
+            addMessage('assistant', '👋 Hello! I am SDRF-GPT Assistant.\n\nPlease tell me what organism the experimental samples are from. I will select the appropriate SDRF template based on the organism type.');
         }
 
-        // 加载会话列表
+        // Load session list
         async function loadSessions() {
             try {
                 const response = await fetch('/sessions');
@@ -402,11 +402,11 @@
                 allSessions = data.sessions;
                 renderSessions();
             } catch (error) {
-                console.error('加载会话失败:', error);
+                console.error('Failed to load sessions:', error);
             }
         }
 
-        // 渲染会话列表
+        // Render session list
         function renderSessions() {
             const list = document.getElementById('sessionsList');
             list.innerHTML = allSessions.map(session => `
@@ -417,14 +417,14 @@
             `).join('');
         }
 
-        // 切换会话
+        // Switch session
         async function switchSession(sessionId) {
             currentSessionId = sessionId;
             renderSessions();
             await loadSessionHistory(sessionId);
         }
 
-        // 加载会话历史
+        // Load session history
         async function loadSessionHistory(sessionId) {
             try {
                 const response = await fetch(`/sessions/${sessionId}/history`);
@@ -437,23 +437,23 @@
                     addMessage(msg.role, msg.content, false);
                 });
             } catch (error) {
-                console.error('加载历史失败:', error);
+                console.error('Failed to load history:', error);
             }
         }
 
-        // 新建对话
+        // New chat
         function newChat() {
             currentSessionId = 'session_' + Date.now();
             document.getElementById('messages').innerHTML = '';
             uploadedFiles = [];
             document.getElementById('fileList').innerHTML = '';
             loadSessions();
-            addMessage('assistant', '👋 新对话开始！请告诉我该实验样本的 organism（物种）是什么？');
+            addMessage('assistant', '👋 New chat started! Please tell me what organism the experimental samples are from.');
         }
 
-        // 清空对话
+        // Clear chat
         async function clearChat() {
-            if (confirm('确定要清空当前对话吗？')) {
+            if (confirm('Are you sure you want to clear the current chat?')) {
                 try {
                     await fetch('/sessions/clear', {
                         method: 'POST',
@@ -461,14 +461,14 @@
                         body: JSON.stringify({session_id: currentSessionId})
                     });
                     document.getElementById('messages').innerHTML = '';
-                    addMessage('assistant', '对话已清空。请重新开始。');
+                    addMessage('assistant', 'Chat cleared. Please start again.');
                 } catch (error) {
-                    console.error('清空失败:', error);
+                    console.error('Failed to clear:', error);
                 }
             }
         }
 
-        // 处理文件上传
+        // Handle file upload
         async function handleFileUpload() {
             const fileInput = document.getElementById('fileInput');
             const files = Array.from(fileInput.files);
@@ -480,7 +480,7 @@
 
             try {
                 const fileListDiv = document.getElementById('fileList');
-                fileListDiv.innerHTML = '⏳ 正在处理文件...';
+                fileListDiv.innerHTML = '⏳ Processing files...';
 
                 const response = await fetch('/upload', {
                     method: 'POST',
@@ -491,24 +491,24 @@
 
                 if (data.status === 'success') {
                     uploadedFiles.push(data.content);
-                    fileListDiv.innerHTML = `✅ 已上传 ${data.file_count} 个文件: ${data.filenames.join(', ')}`;
+                    fileListDiv.innerHTML = `✅ Uploaded ${data.file_count} file(s): ${data.filenames.join(', ')}`;
                 } else {
-                    fileListDiv.innerHTML = '❌ 文件上传失败';
+                    fileListDiv.innerHTML = '❌ File upload failed';
                 }
             } catch (error) {
-                console.error('文件上传错误:', error);
-                document.getElementById('fileList').innerHTML = '❌ 文件处理失败';
+                console.error('File upload error:', error);
+                document.getElementById('fileList').innerHTML = '❌ File processing failed';
             }
         }
 
-        // 发送消息
+        // Send message
         async function sendMessage() {
             const input = document.getElementById('userInput');
             let message = input.value.trim();
 
             if (!message && uploadedFiles.length === 0) return;
 
-            // 合并上传的文件内容
+            // Merge uploaded file content
             if (uploadedFiles.length > 0) {
                 message = uploadedFiles.join('\n\n') + (message ? '\n\n' + message : '');
                 uploadedFiles = [];
@@ -536,7 +536,7 @@
                 const decoder = new TextDecoder();
                 let buffer = '';
                 let currentMessage = '';
-                let sdrfData = null;  // 存储SDRF数据
+                let sdrfData = null;  // Store SDRF data
 
                 while (true) {
                     const {value, done} = await reader.read();
@@ -558,41 +558,41 @@
                                     currentMessage += parsed.content;
                                     updateLastMessage(currentMessage);
                                 } else if (parsed.type === 'sdrf_json') {
-                                    // 保存SDRF数据，等待流结束后再显示
+                                    // Save SDRF data, display after stream ends
                                     sdrfData = parsed.data;
-                                    console.log('✅ 收到SDRF数据:', sdrfData.length, '行');
+                                    console.log('✅ Received SDRF data:', sdrfData.length, 'rows');
                                 }
                             } catch (e) {
-                                console.error('解析错误:', e);
+                                console.error('Parse error:', e);
                             }
                         }
                     }
                 }
 
-                // 确保有assistant消息容器
+                // Ensure assistant message container exists
                 if (!currentMessage && !sdrfData) {
                     addMessage('assistant', '');
                 }
 
-                // 流结束后，显示SDRF表格
+                // After stream ends, display SDRF table
                 if (sdrfData && sdrfData.length > 0) {
-                    console.log('📊 开始显示SDRF表格...');
-                    // 等待DOM更新
+                    console.log('📊 Starting to display SDRF table...');
+                    // Wait for DOM update
                     await new Promise(resolve => setTimeout(resolve, 100));
                     displaySDRFTable(sdrfData);
                 }
 
             } catch (error) {
-                console.error('发送失败:', error);
-                addMessage('assistant', '❌ 发送失败，请重试');
+                console.error('Send failed:', error);
+                addMessage('assistant', '❌ Send failed, please retry');
             } finally {
                 sendBtn.disabled = false;
-                sendBtn.textContent = '发送';
+                sendBtn.textContent = 'Send';
                 loadSessions();
             }
         }
 
-        // 添加消息
+        // Add message
         function addMessage(role, content, scroll = true) {
             const messagesDiv = document.getElementById('messages');
             const messageDiv = document.createElement('div');
@@ -610,7 +610,7 @@
             }
         }
 
-        // 更新最后一条消息
+        // Update last message
         function updateLastMessage(content) {
             const messagesDiv = document.getElementById('messages');
             let lastMessage = messagesDiv.lastElementChild;
@@ -624,7 +624,7 @@
             }
         }
 
-        // 格式化消息
+        // Format message
         function formatMessage(text) {
             return text
                 .replace(/\n/g, '<br>')
@@ -632,22 +632,22 @@
                 .replace(/`(.*?)`/g, '<code>$1</code>');
         }
 
-        // 显示SDRF表格（分页）
+        // Display SDRF table (with pagination)
         function displaySDRFTable(data) {
-            console.log('📊 displaySDRFTable 被调用，数据行数:', data.length);
+            console.log('📊 displaySDRFTable called, data rows:', data.length);
 
             if (!data || data.length === 0) {
-                console.warn('❌ 数据为空');
+                console.warn('❌ Data is empty');
                 return;
             }
 
             const container = document.createElement('div');
             container.className = 'sdrf-table-container';
 
-            // 数据统计
+            // Data statistics
             const stats = document.createElement('div');
             stats.className = 'data-stats';
-            stats.innerHTML = `📊 数据统计: 共 ${data.length} 行 × ${Object.keys(data[0]).length} 列`;
+            stats.innerHTML = `📊 Data Statistics: ${data.length} rows × ${Object.keys(data[0]).length} columns`;
             container.appendChild(stats);
 
             const pageSize = 50;
@@ -682,7 +682,7 @@
                     container.appendChild(tableDiv);
                 }
 
-                // 更新分页控件
+                // Update pagination controls
                 updatePagination();
             }
 
@@ -690,11 +690,11 @@
                 let controlsHTML = `
                     <div class="table-controls">
                         <div class="pagination">
-                            <button onclick="sdrf_prevPage()" ${currentPage === 0 ? 'disabled' : ''}>上一页</button>
-                            <span>第 ${currentPage + 1} / ${totalPages} 页 (显示 ${currentPage * pageSize + 1}-${Math.min((currentPage + 1) * pageSize, data.length)} / ${data.length})</span>
-                            <button onclick="sdrf_nextPage()" ${currentPage >= totalPages - 1 ? 'disabled' : ''}>下一页</button>
+                            <button onclick="sdrf_prevPage()" ${currentPage === 0 ? 'disabled' : ''}>Previous</button>
+                            <span>Page ${currentPage + 1} / ${totalPages} (showing ${currentPage * pageSize + 1}-${Math.min((currentPage + 1) * pageSize, data.length)} / ${data.length})</span>
+                            <button onclick="sdrf_nextPage()" ${currentPage >= totalPages - 1 ? 'disabled' : ''}>Next</button>
                         </div>
-                        <button class="download-btn" onclick="downloadSDRF()">📥 下载 TSV</button>
+                        <button class="download-btn" onclick="downloadSDRF()">📥 Download TSV</button>
                     </div>
                 `;
 
@@ -707,7 +707,7 @@
                 }
             }
 
-            // 全局函数用于分页
+            // Global functions for pagination
             window.currentSDRFData = data;
             window.sdrf_prevPage = function() {
                 if (currentPage > 0) {
@@ -724,7 +724,7 @@
 
             renderPage();
 
-            // 查找最后一条assistant消息
+            // Find last assistant message
             const messagesDiv = document.getElementById('messages');
             const assistantMessages = messagesDiv.querySelectorAll('.message.assistant');
             const lastMessage = assistantMessages[assistantMessages.length - 1];
@@ -732,19 +732,19 @@
             if (lastMessage) {
                 const contentDiv = lastMessage.querySelector('.message-content');
                 if (contentDiv) {
-                    console.log('✅ 找到消息容器，添加表格');
+                    console.log('✅ Found message container, adding table');
                     contentDiv.appendChild(container);
-                    // 滚动到底部
+                    // Scroll to bottom
                     messagesDiv.scrollTop = messagesDiv.scrollHeight;
                 } else {
-                    console.error('❌ 找不到 message-content');
+                    console.error('❌ Cannot find message-content');
                 }
             } else {
-                console.error('❌ 找不到 assistant 消息');
+                console.error('❌ Cannot find assistant message');
             }
         }
 
-        // 下载SDRF为TSV
+        // Download SDRF as TSV
         function downloadSDRF() {
             const data = window.currentSDRFData;
             if (!data || data.length === 0) return;
@@ -763,14 +763,14 @@
             URL.revokeObjectURL(url);
         }
 
-        // 回车发送
+        // Send on Enter key press
         function handleKeyPress(event) {
             if (event.key === 'Enter') {
                 sendMessage();
             }
         }
 
-        // 页面加载时初始化
+        // Initialize on page load
         window.onload = init;
     </script>
 </body>
