修改了提示词，增加实验类型判断

--- a/static/chat.html
+++ b/static/chat.html
@@ -486,7 +486,7 @@
         // Initialize
         async function init() {
             loadSessions();
-            addMessage('assistant', '👋 Hello! I am SDRF-GPT Assistant.\n\nPlease tell me what organism the experimental samples are from. I will select the appropriate SDRF template based on the organism type.');
+            addMessage('assistant', '👋 Hello! I am SDRF-GPT Assistant. Please upload the manuscript PDF');
         }
 
         // Load session list
